# obfuscator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: push.yml  release.yml
example/: README.md  main.py
src/obfuscator/: __init__.py  main.py
tests/: pytest.ini  students.csv  students_obfuscated.csv
tests/e2e/terraform/: .terraform.lock.hcl  main.tf
tests/integration/: test_main_localstack.py
tests/unit/: test_main.py
