[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obfuscator"
version = "0.0.1"
description = "A package to obfuscate CSV files in AWS S3."
authors = [{ name = "Daria Babicheva", email = "darya.babicheva@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["obfuscator", "obfuscate", "aws", "s3"]

requires-python = ">=3.7"

dependencies = ["boto3>=1.36.16", "jsonschema>=4.23.0"]

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]
test = ["pytest>=8.3.4"]
